--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "motion": "^11.15.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-loading-indicators": "^1.0.0",
     "react-router-dom": "^6.28.1"
   },
   "devDependencies": {
