--- a/package.json
+++ b/package.json
@@ -14,11 +14,14 @@
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^6.3.0",
     "@mui/material": "^6.3.0",
+    "@react-three/drei": "^9.120.4",
+    "@react-three/fiber": "^8.17.10",
     "motion": "^11.15.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-loading-indicators": "^1.0.0",
-    "react-router-dom": "^6.28.1"
+    "react-router-dom": "^6.28.1",
+    "three": "^0.171.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
