--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "react-dom": "^18.3.1",
     "react-loading-indicators": "^1.0.0",
     "react-router-dom": "^6.28.1",
+    "react-slick": "^0.30.3",
+    "slick-carousel": "^1.8.1",
     "three": "^0.171.0"
   },
   "devDependencies": {
