--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "motion": "^11.15.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.4.0",
     "react-loading-indicators": "^1.0.0",
     "react-router-dom": "^6.28.1",
     "three": "^0.171.0"
