--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-loading-indicators": "^1.0.0",
     "react-router-dom": "^6.28.1",
     "react-slick": "^0.30.3",
+    "react-to-print": "^3.0.4",
     "slick-carousel": "^1.8.1",
     "three": "^0.171.0"
   },
