--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "motion": "^11.15.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-ga4": "^2.1.0",
     "react-icons": "^5.4.0",
     "react-loading-indicators": "^1.0.0",
     "react-router-dom": "^6.28.1",
