--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "@mui/icons-material": "^6.3.0",
     "@mui/lab": "^6.0.0-beta.21",
     "@mui/material": "^6.3.0",
-    "@react-three/drei": "^9.119.0",
+    "@pmndrs/assets": "^1.7.0",
+    "@react-three/drei": "^9.120.5",
     "@react-three/fiber": "^8.17.10",
     "@vercel/analytics": "^1.4.1",
     "motion": "^11.15.0",
