--- a/package.json
+++ b/package.json
@@ -20,8 +20,11 @@
     "@react-three/drei": "^9.120.5",
     "@react-three/fiber": "^8.17.10",
     "@vercel/analytics": "^1.4.1",
+    "dnd-core": "^16.0.1",
     "motion": "^11.15.0",
     "react": "^18.3.1",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.3.1",
     "react-ga4": "^2.1.0",
     "react-icons": "^5.4.0",
