--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "react": "^18.3.1",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
+    "react-dnd-multi-backend": "^9.0.0",
+    "react-dnd-touch-backend": "^16.0.1",
     "react-dom": "^18.3.1",
     "react-ga4": "^2.1.0",
     "react-icons": "^5.4.0",
