--- a/package.json
+++ b/package.json
@@ -16,14 +16,20 @@
     "@mui/icons-material": "^6.3.0",
     "@mui/lab": "^6.0.0-beta.21",
     "@mui/material": "^6.3.0",
+    "@mui/x-date-pickers": "^7.28.3",
     "@pmndrs/assets": "^1.7.0",
     "@react-three/drei": "^9.120.5",
     "@react-three/fiber": "^8.17.10",
     "@shadcn/ui": "^0.0.4",
     "@vercel/analytics": "^1.4.1",
     "axios": "^1.7.9",
+    "date-fns": "^2.29.3",
+    "date-fns-tz": "^1.3.7",
+    "dayjs": "^1.11.13",
     "dnd-core": "^16.0.1",
     "lucide-react": "^0.474.0",
+    "moment": "^2.30.1",
+    "moment-timezone": "^0.5.48",
     "motion": "^11.15.0",
     "react": "^18.3.1",
     "react-dnd": "^16.0.1",
